--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="centered">
 <a href="linkPage.html"><img src="images/banner1.gif" id="adBanner" alt="adbanner"></a>
 
-<h3>Please click on a picture to learn more about each superhero!
+	<h3>Please click on a picture to learn more about each superhero!</h3>
 </div>
 </body>
 </html>
